2006-09-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: allow to pass a (domain, path) tuple
	as value for the domain argument of the register() call. Document
	the domain argument.

2006-09-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimp.c (gimp_message): don't leak the message.

	* app/file/file-utils.c (file_utils_find_proc): clear the error
	if we found a file procedure by matching the file extension.

	* plug-ins/common/png.c (load_image): don't call gimp_quit() if
	opening the file fails but return with GIMP_PDB_EXECUTION_ERROR.

2006-09-19  Michael Natterer  <mitch@gimp.org>

	Fix disabling of deprecated procedures (bug #345733):

	* app/pdb/gimppdb.c (gimp_pdb_register_procedure): silently drop
	deprecated procedures if they are disabled via --pdb-compat-mode.

	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_proc_run):
	remove code that handles deprecated procedures even when they are
	disabled, the change above makes this impossible.
	Call plug_in_params_to_args() also if we didn't find the
	procedure, so the PDB doesn't choke on NULL args.

2006-09-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpairbrushtool.c
	* app/tools/gimpaligntool.c
	* app/tools/gimpblendtool.c
	* app/tools/gimpbrightnesscontrasttool.c
	* app/tools/gimpbucketfilltool.c
	* app/tools/gimpbycolorselecttool.c
	* app/tools/gimpclonetool.c
	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcolorizetool.c
	* app/tools/gimpcolorpickertool.c
	* app/tools/gimpconvolvetool.c
	* app/tools/gimpcroptool.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimpdodgeburntool.c
	* app/tools/gimpellipseselecttool.c
	* app/tools/gimperasertool.c
	* app/tools/gimpfliptool.c
	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpfreeselecttool.c
	* app/tools/gimpfuzzyselecttool.c
	* app/tools/gimphealtool.c
	* app/tools/gimphuesaturationtool.c
	* app/tools/gimpinktool.c
	* app/tools/gimpiscissorstool.c
	* app/tools/gimplevelstool.c